# aws-prometheus-mirror

./: .gitignore  README.md  pyproject.toml
deploy/docker/: Dockerfile  build.sh  docker-compose.yml  publish.sh
src/prometheus_mirror/: metric_request.py  mirror.py  model.py  prometheus.py
tests/: test_field_names_request.py  test_field_names_response.py  test_field_values_request.py  test_field_values_response.py  test_metrics_request.py  test_metrics_response.py  test_metrics_response_error.py  test_mirror.py  test_prometheus_query.py  test_request_response_helpers.py
tests/resources/FieldNamesRequest/: 1.empty-conditions.mirror.json  1.empty-conditions.prometheus.txt  2.all-conditions.mirror.json  2.all-conditions.prometheus.txt
tests/resources/FieldNamesResponse/: 1.basic.mirror.json  1.basic.prometheus.txt
tests/resources/FieldValuesRequest/: 1.conditions.mirror.json  1.conditions.prometheus.txt
tests/resources/FieldValuesResponse/: 1.basic.mirror.json  1.basic.prometheus.txt
tests/resources/MetricsRequest/: 1.aggregated.hourly-bucket.mirror.json  1.aggregated.hourly-bucket.prometheus.txt  2.raw.basic.mirror.json  2.raw.basic.prometheus.txt
tests/resources/MetricsResponse/: 1.aggregated.basic.mirror.json  1.aggregated.basic.prometheus.txt  2.raw.basic.mirror.json  2.raw.basic.prometheus.txt
tests/resources/MetricsResponseError/: 1.metric_not_found.error.prometheus.txt  2.invalid_data.error.mirror.json  2.invalid_data.error.prometheus.txt  3.too_many_metrics.error.mirror.json  3.too_many_metrics.error.prometheus.txt  4.required_field.error.mirror.json  4.required_field.error.prometheus.txt  5.bad_data.error.mirror.json  5.bad_data.error.prometheus.txt
